[gd_scene load_steps=2 format=3 uid="uid://race_hud"]

[ext_resource type="Script" path="res://scripts/ui/race_hud.gd" id="1"]

[node name="RaceHUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="SpeedLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 900.0
offset_right = 250.0
offset_bottom = 950.0
theme_override_font_sizes/font_size = 48
text = "0 MPH"

[node name="GearLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 950.0
offset_right = 250.0
offset_bottom = 1000.0
theme_override_font_sizes/font_size = 32
text = "GEAR: 1"

[node name="RPMBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 1000.0
offset_right = 400.0
offset_bottom = 1040.0
max_value = 100.0
value = 0.0
show_percentage = false

[node name="NitrousBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 1520.0
offset_top = 1000.0
offset_right = 1870.0
offset_bottom = 1040.0
max_value = 100.0
value = 100.0
show_percentage = false

[node name="PositionLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 1670.0
offset_top = 50.0
offset_right = 1870.0
offset_bottom = 100.0
theme_override_font_sizes/font_size = 36
text = "1st / 6"
horizontal_alignment = 2

[node name="LapLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 1670.0
offset_top = 100.0
offset_right = 1870.0
offset_bottom = 140.0
theme_override_font_sizes/font_size = 28
text = "Lap: 1 / 3"
horizontal_alignment = 2

[node name="LapTimeLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 1670.0
offset_top = 140.0
offset_right = 1870.0
offset_bottom = 180.0
theme_override_font_sizes/font_size = 24
text = "Time: 0.00"
horizontal_alignment = 2
